--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -5,7 +5,7 @@
     width: 100%;
     max-width: 100%;
     box-shadow: none;
-    background-color: black;
+    background-color: rgb(221, 215, 215);
     position: fixed;
     height: 80px!important;
     overflow: hidden;
